# opengl_ex

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile.sh
cmake/: copy-resources.cmake  dependencies.cmake
include/: CMakeLists.txt  graphics.hpp  shader_handler.hpp  window.hpp
resources/: shader.frag  shader.vert
source/: CMakeLists.txt  graphics.cpp  main.cpp  shader_handler.cpp  window.cpp
